# src/Routing/url_generating_routes.php
@@ -73,8 +73,8 @@ return [
     'read-format' => [['path'], ['_handler' => 'SebLucas\\Cops\\Handlers\\ReadHandler', '_route' => 'read-format'], ['path' => '.+'], [['variable', '/', '.+', 'path'], ['text', '/read']], [], [], []],
     'epubfs' => [['db', 'data', 'comp'], ['_handler' => 'SebLucas\\Cops\\Handlers\\EpubFsHandler', '_route' => 'epubfs'], ['db' => '\\d+', 'data' => '\\d+', 'comp' => '.+'], [['variable', '/', '.+', 'comp'], ['variable', '/', '\\d+', 'data'], ['variable', '/', '\\d+', 'db'], ['text', '/epubfs']], [], [], []],
     'restapi-customtypes' => [[], ['_resource' => 'CustomColumnType', '_handler' => 'SebLucas\\Cops\\Handlers\\RestApiHandler', '_route' => 'restapi-customtypes'], [], [['text', '/restapi/custom']], [], [], []],
-    'restapi-database-table' => [['db', 'name'], ['_resource' => 'Database', '_handler' => 'SebLucas\\Cops\\Handlers\\RestApiHandler', '_route' => 'restapi-database-table'], [], [['variable', '/', '[^/]++', 'name'], ['variable', '/', '[^/]++', 'db'], ['text', '/restapi/databases']], [], [], []],
-    'restapi-database' => [['db'], ['_resource' => 'Database', '_handler' => 'SebLucas\\Cops\\Handlers\\RestApiHandler', '_route' => 'restapi-database'], [], [['variable', '/', '[^/]++', 'db'], ['text', '/restapi/databases']], [], [], []],
+    'restapi-database-table' => [['db', 'name'], ['_resource' => 'Database', '_handler' => 'SebLucas\\Cops\\Handlers\\RestApiHandler', '_route' => 'restapi-database-table'], ['db' => '\\d+', 'name' => '\\w+'], [['variable', '/', '\\w+', 'name'], ['variable', '/', '\\d+', 'db'], ['text', '/restapi/databases']], [], [], []],
+    'restapi-database' => [['db'], ['_resource' => 'Database', '_handler' => 'SebLucas\\Cops\\Handlers\\RestApiHandler', '_route' => 'restapi-database'], ['db' => '\\d+'], [['variable', '/', '\\d+', 'db'], ['text', '/restapi/databases']], [], [], []],
     'restapi-databases' => [[], ['_resource' => 'Database', '_handler' => 'SebLucas\\Cops\\Handlers\\RestApiHandler', '_route' => 'restapi-databases'], [], [['text', '/restapi/databases']], [], [], []],
     'restapi-openapi' => [[], ['_resource' => 'openapi', '_handler' => 'SebLucas\\Cops\\Handlers\\RestApiHandler', '_route' => 'restapi-openapi'], [], [['text', '/restapi/openapi']], [], [], []],
     'restapi-route' => [[], ['_resource' => 'route', '_handler' => 'SebLucas\\Cops\\Handlers\\RestApiHandler', '_route' => 'restapi-route'], [], [['text', '/restapi/routes']], [], [], []],
@@ -116,6 +116,8 @@ return [
     'zipfs-format' => [['path'], ['_handler' => 'SebLucas\\Cops\\Handlers\\ZipFsHandler', '_route' => 'zipfs-format'], ['path' => '.+'], [['variable', '/', '.+', 'path'], ['text', '/zipfs']], [], [], []],
     'mail' => [[], ['_handler' => 'SebLucas\\Cops\\Handlers\\MailHandler', '_route' => 'mail'], [], [['text', '/mail']], [], [], []],
     'graphql' => [[], ['_handler' => 'SebLucas\\Cops\\Handlers\\GraphQLHandler', '_route' => 'graphql'], [], [['text', '/graphql']], [], [], []],
+    'tables-db-name' => [['db', 'name'], ['_handler' => 'SebLucas\\Cops\\Handlers\\TableHandler', '_route' => 'tables-db-name'], ['db' => '\\d+', 'name' => '\\w+'], [['variable', '/', '\\w+', 'name'], ['variable', '/', '\\d+', 'db'], ['text', '/tables']], [], [], []],
+    'tables-db' => [['db'], ['_handler' => 'SebLucas\\Cops\\Handlers\\TableHandler', '_route' => 'tables-db'], ['db' => '\\d+'], [['variable', '/', '\\d+', 'db'], ['text', '/tables']], [], [], []],
     'tables' => [[], ['_handler' => 'SebLucas\\Cops\\Handlers\\TableHandler', '_route' => 'tables'], [], [['text', '/tables']], [], [], []],
     'test' => [[], ['_handler' => 'SebLucas\\Cops\\Handlers\\TestHandler', '_route' => 'test'], [], [['text', '/test']], [], [], []],
     'admin-clearcache' => [[], ['action' => 'clearcache', '_handler' => 'SebLucas\\Cops\\Handlers\\AdminHandler', '_route' => 'admin-clearcache'], [], [['text', '/admin/clearcache']], [], [], []],
